Corrected styles on small viewport

--- a/src/components/projects/projects.less
+++ b/src/components/projects/projects.less
@@ -6,5 +6,9 @@
 	&__title {
 		padding-left: @gridFrstCol;
 		margin-bottom: calc(@sectVerticalPadding/2);
+
+		@media (max-width: 1100px) {
+			padding-left: 0;
+		}
 	}
 }
