--- a/src/components/projectsList/projectsList.less
+++ b/src/components/projectsList/projectsList.less
@@ -9,6 +9,9 @@
 
 	@media (max-width: 1100px) {
 		grid-template-columns: 1fr 1fr;
+		grid-template-rows: repeat(3, auto);
+		column-gap: 20px;
+
 
 		li:not(.projects-list-item) {
 			display: none;
@@ -16,7 +19,7 @@
 
 		@media (max-width: 700px) {
 			grid-template-columns: 1fr;
-			grid-template-rows: repeat(auto, auto);
+			grid-template-rows: repeat(7, auto);
 		}
 	}
 }
