--- a/src/components/projectsListItem/projectsListItem.less
+++ b/src/components/projectsListItem/projectsListItem.less
@@ -1,13 +1,26 @@
 .projects-list-item {
-	display: flex;
-	flex-direction: column;
-	gap: 20px;
-
 	padding: 0 15px;
+
+	@media (max-width: 1100px) {
+		padding: 0 0px;
+	}
+
+	&__link-wrapper {
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		gap: 20px;
+	}
 
 	&__img {
 		flex: 1 1 auto;
 		max-width: 100%;
 		object-fit: cover;
+	}
+
+	&__caption {
+		display: flex;
+		align-items: center;
+		justify-content: space-between;
 	}
 }
